--- a/front-end/estudo/src/app/shared/components/produto/produto-cadastrar/produto-cadastrar.component.html
+++ b/front-end/estudo/src/app/shared/components/produto/produto-cadastrar/produto-cadastrar.component.html
@@ -1,1 +1,31 @@
-<p>produto-cadastrar works!</p>
+<form nz-form (ngSubmit)="onSubmit()">
+
+    <nz-form-item>
+        <nz-form-label [nzSpan]="6" nzFor="nome">Nome</nz-form-label>
+        <nz-form-control [nzSpan]="14">
+            <input nz-input name="nome" type="text" id="nome" [(ngModel)]="produto.nome">
+        </nz-form-control>
+    </nz-form-item>
+
+    <nz-form-item>
+        <nz-form-label [nzSpan]="6" nzFor="quantidade">Quantidade</nz-form-label>
+        <nz-form-control [nzSpan]="8">
+            <nz-input-number [nzMin]="1" [nzMax]="9999" [nzStep]="1" name="quantidade" id="quantidade"
+                [(ngModel)]="produto.quantidade"></nz-input-number>
+        </nz-form-control>
+
+        <nz-form-label [nzSpan]="3" nzFor="dataCadastro">Data Cadastro</nz-form-label>
+        <nz-form-control [nzSpan]="8">
+            <nz-date-picker [nzFormat]="dateFormat" (ngModelChange)="onChange($event)" name="dataCadastro" id="dataCadastro"
+                [(ngModel)]="produto.dataCadastro"></nz-date-picker>
+        </nz-form-control>
+    </nz-form-item>
+
+    <nz-form-item>        
+        <nz-form-control [nzSpan]="14" [nzOffset]="6">
+            <button type="submit" nz-button nzType="primary">Salvar</button>
+        </nz-form-control>
+    </nz-form-item>
+
+
+</form>
